set(OPCODE_SRCS
	Ice/IceRevisitedRadix.cpp
	Ice/IceIndexedTriangle.cpp
	Ice/IceUtils.cpp
	Ice/IceHPoint.cpp
	Ice/IcePoint.cpp
	Ice/IceMatrix3x3.cpp
	Ice/IceRay.cpp
	Ice/IceContainer.cpp
	Ice/IceMatrix4x4.cpp
	Ice/IceAABB.cpp
	Ice/IceSegment.cpp
	Ice/IcePlane.cpp
	Ice/IceRandom.cpp
	Ice/IceOBB.cpp
	Ice/IceTriangle.cpp
	OPC_AABBCollider.cpp
	OPC_AABBTree.cpp
	OPC_BaseModel.cpp
	OPC_BoxPruning.cpp
	OPC_Collider.cpp
	OPC_Common.cpp
	OPC_HybridModel.cpp
	OPC_LSSCollider.cpp
	OPC_MeshInterface.cpp
	OPC_Model.cpp
	OPC_OBBCollider.cpp
	Opcode.cpp
	OPC_OptimizedTree.cpp
	OPC_Picking.cpp
	OPC_PlanesCollider.cpp
	OPC_RayCollider.cpp
	OPC_SphereCollider.cpp
	OPC_SweepAndPrune.cpp
	OPC_TreeBuilders.cpp
	OPC_TreeCollider.cpp
	OPC_VolumeCollider.cpp
)

set(OPCODE_HEADERS
	Ice/IceFPU.h
	Ice/IcePlane.h
	Ice/IceRay.h
	Ice/IceMatrix4x4.h
	Ice/IceOBB.h
	Ice/IceAxes.h
	Ice/IceBoundingSphere.h
	Ice/IceMatrix3x3.h
	Ice/IceLSS.h
	Ice/IcePreprocessor.h
	Ice/IceIndexedTriangle.h
	Ice/IceRevisitedRadix.h
	Ice/IceTriList.h
	Ice/IceTypes.h
	Ice/IcePairs.h
	Ice/IceTriangle.h
	Ice/IcePoint.h
	Ice/IceUtils.h
	Ice/IceHPoint.h
	Ice/IceContainer.h
	Ice/IceSegment.h
	Ice/IceMemoryMacros.h
	Ice/IceRandom.h
	Ice/IceAABB.h
	OPC_AABBCollider.h
	OPC_AABBTree.h
	OPC_BaseModel.h
	OPC_BoxBoxOverlap.h
	OPC_BoxPruning.h
	OPC_Collider.h
	OPC_Common.h
	OPC_HybridModel.h
	OPC_IceHook.h
	OPC_LSSAABBOverlap.h
	OPC_LSSCollider.h
	OPC_LSSTriOverlap.h
	OPC_MeshInterface.h
	OPC_Model.h
	OPC_OBBCollider.h
	Opcode.h
	OPC_OptimizedTree.h
	OPC_Picking.h
	OPC_PlanesAABBOverlap.h
	OPC_PlanesCollider.h
	OPC_PlanesTriOverlap.h
	OPC_RayAABBOverlap.h
	OPC_RayCollider.h
	OPC_RayTriOverlap.h
	OPC_Settings.h
	OPC_SphereAABBOverlap.h
	OPC_SphereCollider.h
	OPC_SphereTriOverlap.h
	OPC_SweepAndPrune.h
	OPC_TreeBuilders.h
	OPC_TreeCollider.h
	OPC_TriBoxOverlap.h
	OPC_TriTriOverlap.h
	OPC_VolumeCollider.h
)

add_library(opcode STATIC ${OPCODE_SRCS} ${OPCODE_HEADERS})
