add_subdirectory(fps)
add_subdirectory(gameBase)
add_subdirectory(vehicles)
add_subdirectory(turret)
# Broken
# add_subdirectory(sceneComponent)
add_subdirectory(fx)
add_subdirectory(physics)
add_subdirectory(sfx)
add_subdirectory(decal)

add_srcs(
	aiClient.cpp
	aiConnection.cpp
	aiPlayer.cpp
	camera.cpp
	cameraSpline.cpp
	containerQuery.cpp
	convexShape.cpp
	debris.cpp
	examples/renderShapeExample.cpp
	examples/renderObjectExample.cpp
	examples/renderMeshExample.cpp
	gameFunctions.cpp
	gameTSCtrl.cpp
	groundPlane.cpp
	guiMaterialPreview.cpp
	guiNoMouseCtrl.cpp
	guiObjectView.cpp
	item.cpp
	levelInfo.cpp
	lightAnimData.cpp
	lightBase.cpp
	lightDescription.cpp
	lightFlareData.cpp
	missionArea.cpp
	missionMarker.cpp
	occlusionVolume.cpp
	pathCamera.cpp
	physicalZone.cpp
	player.cpp
	pointLight.cpp
	portal.cpp
	prefab.cpp
	projectile.cpp
	proximityMine.cpp
	rigid.cpp
	rigidShape.cpp
	scopeAlwaysShape.cpp
	shapeBase.cpp
	shapeCollision.cpp
	shapeImage.cpp
	spotLight.cpp
	staticShape.cpp
	trigger.cpp
	tsStatic.cpp
	zone.cpp
)

add_headers(
	aiClient.h
	aiConnection.h
	aiPlayer.h
	camera.h
	cameraSpline.h
	containerQuery.h
	convexShape.h
	debris.h
	examples/renderShapeExample.h
	examples/renderObjectExample.h
	examples/renderMeshExample.h
	gameFunctions.h
	gameTSCtrl.h
	groundPlane.h
	guiMaterialPreview.h
	guiObjectView.h
	item.h
	levelInfo.h
	lightAnimData.h
	lightBase.h
	lightDescription.h
	lightFlareData.h
	missionArea.h
	missionMarker.h
	objectTypes.h
	occlusionVolume.h
	pathCamera.h
	physicalZone.h
	player.h
	pointLight.h
	portal.h
	prefab.h
	projectile.h
	proximityMine.h
	resource.h
	rigid.h
	rigidShape.h
	shapeBase.h
	spotLight.h
	staticShape.h
	trigger.h
	tsStatic.h
	zone.h
)

add_includes(
	${CMAKE_SOURCE_DIR}/../lib/collada/include
	${CMAKE_SOURCE_DIR}/../lib/collada/include/1.4
)

