set(TORQUE_COLLISION_SRCS
	abstractPolyList.cpp
	boxConvex.cpp
	clippedPolyList.cpp
	concretePolyList.cpp
	convex.cpp
	depthSortList.cpp
	earlyOutPolyList.cpp
	extrudedPolyList.cpp
	gjk.cpp
	optimizedPolyList.cpp
	planeExtractor.cpp
	polytope.cpp
	vertexPolyList.cpp
)
set(TORQUE_COLLISION_HEADERS
	abstractPolyList.h
	boxConvex.h
	clippedPolyList.h
	collision.h
	concretePolyList.h
	convex.h
	depthSortList.h
	earlyOutPolyList.h
	extrudedPolyList.h
	gjk.h
	optimizedPolyList.h
	planeExtractor.h
	polytope.h
	vertexPolyList.h
)

add_library(${TORQUE_BUILD}_collision STATIC ${TORQUE_COLLISION_SRCS} ${TORQUE_COLLISION_HEADERS})
